feat : Hide the canvases just let the video

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ canvas {
 <div>
     <video id="vid" autoplay playsinline width="640" height="480"></video>
 </div>
-<canvas id="canvas-source" width="640" height="480"></canvas>
-<canvas id="canvas-blended" width="640" height="480"></canvas>
+<canvas id="canvas-source" width="640" height="480" style="visibility: hidden;"></canvas>
+<canvas id="canvas-blended" width="640" height="480", style="visibility: hidden;"></canvas>
 </body>
 </html>
