fix : Make the gap between iced coffee regular

--- a/index.html
+++ b/index.html
@@ -16,14 +16,8 @@ canvas {
 <body>
 <button id="but" onclick="startMotionDetection()">Start Motion detection</button>
 <button id="but" onclick="stopMotionDetection()">Stop Motion detection</button>
-
-<div class="container" style="width: 260; height: 480;">
-    <div class="inner">
-        <canvas id="myCanvas" width="270" height="480" class="inner"></canvas>
-    </div>
-    <div class="inner" style="z-index: 10; left: 80px; top: 310px;">
-        <img src="assets/profiles/nicki-minaj.png" height="100" width="100" />
-    </div>    
+<div>
+    <canvas id="myCanvas" width="1000" height="270px" ></canvas>
 </div>
 <div>
     <video id="vid" autoplay playsinline width="640" height="480"></video>
