feat: Add username

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ html, body {
     running for more that 3 seconds she will catch you
   </p>
   <p>Please enter your name: </p> 
-  <input type="text" style="margin: 25px;">
+  <input id="username-field" type="text" style="margin: 25px;">
   <button type="button" onclick="startMotionDetection()">Start</button>
 </div>
 
