--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ html, body {
 </div>
 
 <canvas id="myCanvas" width="100%" height="100%" ></canvas>
+<canvas id="font-canvas" style="display: none;"></canvas>
 
 
 <div style="width: 100%; background-color: greenyellow;">
