feat : Add countdown when the user stops moving

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@ html, body {
 </head>
 <body>
 
-<button id="but" onclick="stopMotionDetection()">Stop Motion detection</button>
+
+<h1 id="stop-running-counter"></h1>
 
 <div id="popup-form" class="popup">
   <h2>Welcome to the run kweeeeeeeen ! &#128133;</h2> 
@@ -39,7 +40,7 @@ html, body {
   </p>
   <iframe style="margin-bottom: 16px;" src="https://giphy.com/embed/ckMk3RKUK29lziaspI" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/jumping-jacks-ckMk3RKUK29lziaspI">via GIPHY</a></p>
   <p style="margin-bottom: 16px; margin-top: 16px;">BONUS MOTIVATION: Millie is after your ass so you better hurry up. If you stop
-    running for more that 3 seconds she will catch you
+    running for more than 10 seconds she will catch you
   </p>
   <p>Please enter your name: </p> 
   <input id="username-field" type="text" style="margin: 25px;">
