--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 
 <html>
 <head>
-<link rel="icon" href="rk-logo.png">
-<link rel="stylesheet" href="css/app.css">
+<link rel="stylesheet" type="text/css" href="css/app.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <style>
     
